--- a/ss6/demo/src/main/webapp/WEB-INF/views/update.html
+++ b/ss6/demo/src/main/webapp/WEB-INF/views/update.html
@@ -19,6 +19,7 @@
     <title>Title</title>
 </head>
 <body>
+
 <h1> Update Product </h1>
 <form th:object="${product}" th:action="@{/products/edit}" method="post">
     <div class="mb-3">
@@ -43,5 +44,9 @@
     </div>
     <button type="submit" class="btn btn-outline-success">Update</button>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
