--- a/ss6/demo/src/main/webapp/WEB-INF/views/home.html
+++ b/ss6/demo/src/main/webapp/WEB-INF/views/home.html
@@ -31,7 +31,7 @@
 
         <div class="my-3 px-5 row justify-content-between">
             <div class="col-6">
-                <a class="btn btn-info" href="/products">SHOW ALL PRODUCT</a>
+                <a class="btn btn-success" href="/products">SHOW ALL PRODUCT</a>
                 <button type="button"
                         class="btn btn-info mx-2"
                         data-bs-toggle="modal"
