--- a/ss7/blog1/src/main/resources/templates/details.html
+++ b/ss7/blog1/src/main/resources/templates/details.html
@@ -1,64 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DETAIL</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/4bf93b0ca4.js" crossorigin="anonymous"></script>
-
-
-  <!--     Link to the Bootstrap CSS file -->
-  <link rel="stylesheet" href="/bootstrap520/css/bootstrap.min.css">
-  <script src="/bootstrap520/js/bootstrap.min.js"></script>
-  <!--     Include jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-          integrity="sha384-KWI/x1YonRENGIFUfdTvf/zUoVZiE8OgDmKNu8VAnmQUDf1G/+x0yTHvYbD0b6Q6"
-          crossorigin="anonymous"></script>
-  <title>Title</title>
-</head>
-<body>
 <section>
-  <div class="container mt-4 mt-sm-2">
-    <a class="btn btn-outline-danger" th:href="@{/blogs/delete/{id}(id = ${blog.getId()})}">Delete Blog</a>
-    <a class="btn btn-outline-info" th:href="@{/blogs/update/{id}(id = ${blog.getId()})}">Update Blog</a>
-    <div class="row row-cols-md-3 row-cols-2 justify-content-center gy-2 gx-3">
-      <div th:object="${blog}">
-        <div class="col">
-          <div class="row justify-content-center">
-            <div class="card" style="width: 50rem">
-              <a th:href="@{/blogs/details/id(id = ${blog.getId()})}">
-                <img
-                        th:src="${blog.getImage()}"
-                        class="card-img-top text-center product-img"
-                        alt="merch"
-                />
-              </a>
-              <div class="card-body overflow-scroll" style="height: 80px;">
-                <h3 class="link link-offset-2-hover text-black fs-5" th:text="${blog.getTitle()}"></h3>
-              </div>
-              <p class="card-text fs-5" th:text="${blog.getDate()}"></p>
-              <div class="card-footer overflow-scroll" style="height: 150px;">
-                <p class="card-text fs-5" th:text="${blog.getContent()}"></p>
-              </div>
+    <div class="container mt-4 mt-sm-2">
+
+        <a role="button" class="btn btn-outline-danger"
+           th:attr="onclick=|remove('${blog.id}', '${blog.title}')|"
+           data-bs-toggle="modal" data-bs-target="#modelId">
+            Delete</a>
+
+        <a class="btn btn-outline-info" th:href="@{/blogs/update/{id}(id = ${blog.getId()})}">Update Blog</a>
+        <div class="row row-cols-md-3 row-cols-2 justify-content-center gy-2 gx-3">
+            <div th:object="${blog}">
+                <div class="col">
+                    <div class="row justify-content-center">
+                        <div class="card" style="width: 50rem">
+                            <a th:href="@{/blogs/details/id(id = ${blog.getId()})}">
+                                <img
+                                        th:src="${blog.getImage()}"
+                                        class="card-img-top text-center product-img"
+                                        alt="merch"
+                                />
+                            </a>
+                            <div class="card-body overflow-scroll" style="height: 80px;">
+                                <h3 class="link link-offset-2-hover text-black fs-5" th:text="${blog.getTitle()}"></h3>
+                            </div>
+                            <p class="card-text fs-5" th:text="${blog.getDate()}"></p>
+                            <div class="card-footer overflow-scroll" style="height: 150px;">
+                                <p class="card-text fs-5" th:text="${blog.getContent()}"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
+
+<!-- Modal delete account-->
+<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel1">Are you sure to delete this blog:
+                    <span class="deleteName text-danger"></span><span> ?</span>
+                </h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-footer">
+                <form th:action="@{/blogs/delete}" method="post">
+                    <input type="hidden" name="id" id="deleteId">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-outline-danger">DELETE</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    function remove(id, title) {
+        console.log(id)
+        console.log(title)
+        document.getElementById("deleteId").value = id;
+        document.querySelector(".deleteName").innerText = title;
+    }
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-</body>
-</html>
 </body>
 </html>
