--- a/ss7/blog1/src/main/resources/templates/add.html
+++ b/ss7/blog1/src/main/resources/templates/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,24 +25,22 @@
         <label for="image" class="col-form-label">New Blog Image:</label>
         <input th:field="*{image}" type="text" class="form-control" id="image">
     </div>
-    <!--  <div class="mb-3">-->
-    <!--    <label for="date" class="col-form-label">New product price:</label>-->
-    <!--    <input th:field="*{date}" type="text" class="form-control" id="date">-->
-    <!--  </div>-->
+
     <div class="mb-3">
         <label for="content" class="col-form-label">New product description:</label>
         <textarea th:field="*{content}" class="form-control" id="content"></textarea>
     </div>
 
-    <!--    <div class="mb-3">-->
-    <!--      <label for="type" class="col-form-label"> type:</label>-->
-    <!--      <select name="type" class="form-select" id="type">-->
-    <!--        <option value="m">M</option>-->
-    <!--        <option value="music">Music</option>-->
-    <!--      </select>-->
-    <!--    </div>-->
+    <div class="mb-3">
+        <select th:field="*{category}">
+            <option th:each="category : ${categories}" th:text="${category.name}" th:value="${category.id}" >
+            </option>
+        </select>
 
     </div>
+
+
+
     <button name="yes" type="submit" class="btn btn-success">Save changes</button>
 </form>
 
@@ -51,3 +49,4 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
