--- a/ss7/blog1/src/main/resources/templates/edit.html
+++ b/ss7/blog1/src/main/resources/templates/edit.html
@@ -34,8 +34,13 @@
         <textarea th:field="*{content}" class="form-control" id="content"></textarea>
     </div>
 
-
+    <div class="mb-3">
+        <select th:field="*{category}">
+            <option th:each="category : ${categories}" th:text="${category.name}" th:value="${category.id}" >
+            </option>
+        </select>
     </div>
+
     <button name="yes" type="submit" class="btn btn-success">Save changes</button>
 </form>
 
