--- a/ss7/blog1/src/main/resources/templates/home.html
+++ b/ss7/blog1/src/main/resources/templates/home.html
@@ -33,6 +33,17 @@
             <a class="btn btn-success" href="/blogs">SHOW ALL BLOGS</a>
             <a class="btn btn-success" href="/blogs/create">Write New Blog</a>
 
+
+            <form id="form-submit" action="/blogs/choice" >
+                <select class="form-select w-25 d-inline" name="searchedCategory" onchange="this.form.submit()">
+                    <option selected value="">Category</option>
+                    <option th:each="category : ${categories}" th:text="${category.name}" th:value="${category.id}">
+                    </option>
+                </select>
+
+            </form>
+
+
         </div>
         <div class="col-6">
             <form action="/blogs/search">
@@ -57,7 +68,9 @@
                             />
                         </a>
                         <div class="card-body overflow-scroll" style="height: 80px;">
-                            <h3 class="link link-offset-2-hover text-black fs-5" th:text="${blog.getTitle()}"></h3>
+                            <h3 class="link link-offset-2-hover text-black fs-5" th:text="${blog.getTitle()}">
+                            </h3>
+                            <span th:text="${blog.category.name}"></span>
                         </div>
                         <p class="card-text fs-5" th:text="${blog.getDate()}"></p>
                         <div class="card-footer overflow-scroll" style="height: 120px;">
@@ -68,8 +81,13 @@
             </div>
         </div>
     </div>
-    </div>
 </section>
+<div class="p-5">
+    <a class="btn btn-success" th:if="${blogs.hasPrevious()}" th:href="@{/blogs(page=${blogs.number - 1})}">Previous</a>
+    <span th:text="${blogs.number + 1}"></span>
+    <a class="btn btn-success" th:if="${blogs.hasNext()}" th:href="@{/blogs(page=${blogs.number + 1})}">Next</a>
+</div>
+
 
 <script th:if="${successDelete != null || errorDelete != null || invalidIDMessage != null || success != null}">
     console.log("im herer")
@@ -77,6 +95,12 @@
         document.querySelector(".alert-message").style.display = "none"
     }, 3000)
 
+</script>
+<script>
+    function submit(){
+        console.log("hererer")
+        document.querySelector("#form-submit").submit();
+    }
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
