--- a/ss7/blog1/src/main/resources/templates/home.html
+++ b/ss7/blog1/src/main/resources/templates/home.html
@@ -18,14 +18,6 @@
 </head>
 <body>
 
-<div class="row justify-content-center">
-    <div class="col col-9 alert alert-danger alert-message text-center" role="alert"
-         th:if="${successDelete != null || errorDelete != null || invalidIDMessage != null || success != null}"
-         th:text="${successDelete || errorDelete || invalidIDMessage || success}">
-    </div>
-
-</div>
-
 <section class="my-2">
 
     <div class="my-3 px-5 row justify-content-between">
@@ -37,10 +29,9 @@
             <form id="form-submit" action="/blogs/choice" >
                 <select class="form-select w-25 d-inline" name="searchedCategory" onchange="this.form.submit()">
                     <option selected value="">Category</option>
-                    <option th:each="category : ${categories}" th:text="${category.name}" th:value="${category.id}">
-                    </option>
+                    <option th:each="category : ${categories}"
+                            th:text="${category.name}" th:value="${category.id}"></option>
                 </select>
-
             </form>
 
 
@@ -89,19 +80,31 @@
 </div>
 
 
-<script th:if="${successDelete != null || errorDelete != null || invalidIDMessage != null || success != null}">
-    console.log("im herer")
-    setTimeout(function () {
-        document.querySelector(".alert-message").style.display = "none"
-    }, 3000)
 
+<!-- Modal success -->
+<div class="modal fade" id="modal-success" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 th:text="${message}"></h4>
+            </div>
+            <div class="modal-footer">
+                <button name="no" type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script th:if="${message}">
+        // Get the modal element
+        let myModal = document.querySelector("#modal-success");
+
+        // Create a new Modal instance
+        let modal = new bootstrap.Modal(myModal);
+
+        // Show the modal
+        modal.show();
 </script>
-<script>
-    function submit(){
-        console.log("hererer")
-        document.querySelector("#form-submit").submit();
-    }
-</script>
+<!-- end -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
